--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -1,5 +1,22 @@
 <h1> index page</h1>
 
+<br>
+<br>
+<!--THE SEARCH FORM START -->
+<div>
+  <%= form_tag midis_path, method: :get, class: "d-flex" do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Browse midis"
+    %>
+    <%= submit_tag "Go", class: "btn btn-primary" %>
+  <% end %>
+</div>
+<!-- THE SEARCH FORM END -->
+<br>
+<br>
+
 <% @midis.each do |midi|%>
   <p><%= midi.title %></p>
 <% end %>
