finishes building layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home-container">
+  <div class="banenr">banner</div>
+  <div class="search">search</div>
+  <div class="rotating-slide">rotating-slide</div>
+  <div class="midis-container">midis-container</div>
+</div>
