--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,38 @@
-// Specific CSS for your home-page
+// // Specific CSS for your home-page
+
+.home-container {
+  padding: 0;
+  margin: 0;
+  display: grid;
+  height: 100%;
+  grid-template-rows: 70vh 100px 50vh 1fr;
+  grid-template-columns: 1fr;
+  grid-template-areas:'banner'
+                      'search'
+                      'rotating-slide'
+                      'midis-container';
+  font-family: $body-font;
+  font-size: 30px;
+}
+
+.home-container > div {
+    background-color: rgb(26, 147, 147);
+    // padding: 20px;
+    border: 1px solid black;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner {
+  grid-area: banner;
+}
+.search {
+  grid-area: search;
+}
+.rotating-slide {
+  grid-area: rotating-slide;
+}
+.midis-container {
+  grid-area: midis-container;
+}
