--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,1 +1,38 @@
-<nav>navbar</nav>
+<header>
+<!-- logo + name start -->
+  <%= link_to root_path, class: "navbar-brand" do %>
+  <%# <%= image_tag "ccp_logo_project.png", class: "logo" %>
+    <h2>medee</h2>
+  <% end %>
+<!-- logo + name end -->
+
+<!-- navbar links start -->
+  <ul class="navbar-links">
+    <li class="navbar-item">
+      <%= link_to "Home", root_path, class: "navbar-link" %>
+    </li>
+    <li class="navbar-item">
+      <%= link_to "medee", midis_path, class: "navbar-link" %>
+    </li>
+  </ul>
+<!-- navbar links end -->
+
+<!-- dropdown  -->
+  <ul class="navbar-sign-in">
+    <% if user_signed_in? %>
+      <div class="navbar-item profile">
+        <div class="profile-btn"><%= image_tag "bulma.png", class: "profile-pic" %></div>
+        <div class="profile-dropdown-menu">
+          <li class="navbar-dropdown-item"><%= link_to "My profile", "#", class: "navbar-link" %></li>
+          <li class="navbar-dropdown-item"><%= link_to "Logout",  destroy_user_session_path, data: {turbo_method: :delete}, class: "navbar-link" %>
+        </div>
+      </div>
+    <% else %>
+      <li class="navbar-item">
+        <%= link_to "Log in", new_user_session_path, class: "navbar-link" %>
+      </li>
+    <% end %>
+  </ul>
+<!-- dropdown  -->
+
+</header>
