--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,4 @@
-<div class="home-container">
-  <div class="banenr">banner</div>
-  <div class="search">search</div>
-  <div class="rotating-slide">rotating-slide</div>
-  <div class="midis-container">midis-container</div>
-</div>
+<h1>Pages#home</h1>
+<p>Find me in app/views/pages/home.html.erb</p>
+<%= cl_image_tag("cld-sample-4",
+      width: 400, height: 300, crop: :fill) %>
