landing page layout

--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -8,13 +8,10 @@
 // }
 
 footer {
-  display: flex;
-  position: relative;
   height:50px;
-  // left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color: rgb(46, 75, 37);
   color: white;
   text-align: center;
 }
