--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,17 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= cl_image_tag("cld-sample-4",
-      width: 400, height: 300, crop: :fill) %>
+
+<div>
+  <%# form for midi files %>
+  <%= simple_form_for(@midi) do |f| %>
+    <%= f.input :title %>
+    <%= f.input :key_signature %>
+    <%= f.input :time_signature %>
+    <%= f.input :description %>
+    <%= f.input :photo, as: :file %>
+    <%= f.submit %>
+  <% end %>
+
+  <%# form for user picture %>
+
+</div>
