Comment out buttons on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       width: 400, height: 300, crop: :fill) %>
 
 <%# test button %>
-<a class="neon-button-primary" href="/midis">
+<%# <a class="neon-button-primary" href="/midis">
   <span></span>
   <span></span>
   <span></span>
@@ -18,4 +18,4 @@
   <span></span>
   <span></span>
   Secondary button
-</a>
+</a> %>
