--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,14 @@
 <header>
-<!-- logo + name start -->
-  <%= link_to root_path, class: "navbar-brand" do %>
+<!-- logo start -->
+  <%= link_to root_path, class: "navbar-logo-section" do %>
   <%# <%= image_tag "ccp_logo_project.png", class: "logo" %>
+    <%# name will be gone once there's a logo %>
     <h2>medee</h2>
   <% end %>
-<!-- logo + name end -->
+<!-- logo end -->
 
 <!-- navbar links start -->
-  <ul class="navbar-links">
+  <ul class="navbar-link-section">
     <li class="navbar-item">
       <%= link_to "Home", root_path, class: "navbar-link" %>
     </li>
@@ -17,15 +18,13 @@
   </ul>
 <!-- navbar links end -->
 
-<!-- dropdown  -->
-  <ul class="navbar-sign-in">
+<!-- sign-in start -->
+  <ul class="navbar-sign-in-section">
     <% if user_signed_in? %>
-      <div class="navbar-item profile">
-        <div class="profile-btn"><%= image_tag "bulma.png", class: "profile-pic" %></div>
-        <div class="profile-dropdown-menu">
-          <li class="navbar-dropdown-item"><%= link_to "My profile", "#", class: "navbar-link" %></li>
-          <li class="navbar-dropdown-item"><%= link_to "Logout",  destroy_user_session_path, data: {turbo_method: :delete}, class: "navbar-link" %>
-        </div>
+      <li class="user-avatar"><%= image_tag "bulma.png", class: "avatar-picture" %></li>
+      <div class="avatar-dropdown-menu">
+        <li class="avatar-dropdown-item"><%= link_to "My profile", "#", class: "navbar-link" %></li>
+        <li class="avatar-dropdown-item"><%= link_to "Log out",  destroy_user_session_path, data: {turbo_method: :delete}, class: "navbar-link" %>
       </div>
     <% else %>
       <li class="navbar-item">
@@ -33,7 +32,5 @@
       </li>
     <% end %>
   </ul>
-<!-- dropdown  -->
-
+<!--  sign-in end  -->
 </header>
-
