formats profile.html.erb to be easier on eyes

--- a/app/views/profiles/profile.html.erb
+++ b/app/views/profiles/profile.html.erb
@@ -1,15 +1,21 @@
 <h1>profile</h1>
+
+<h3>basic</h3>
 <ul>
   <li>username</li>
   <li>profilepic</li>
   <li>follow button</li>
   <li>my uploaded midis [default]</li>
   <li>my liked midis [alternate list]</li>
-  <h3>Bio Card</h3>
-  <ul>
-    <li>uploaded midi count</li>
-    <li>upvotes sum</li>
-    <li>bio</li>
-    <li>icon link to [soundcloud, instagram, facebook]</li>
-  </ul>
+</ul>
+
+<br>
+<br>
+
+<h3>Bio Card</h3>
+<ul>
+  <li>uploaded midi count</li>
+  <li>upvotes sum</li>
+  <li>bio</li>
+  <li>icon link to [soundcloud, instagram, facebook]</li>
 </ul>
