cloudinary_profile-picture

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,10 +8,7 @@
     <%= f.input :key_signature %>
     <%= f.input :time_signature %>
     <%= f.input :description %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :midi, as: :file %>
     <%= f.submit %>
   <% end %>
-
-  <%# form for user picture %>
-
 </div>
