--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <div class="banenr">banner</div>
+  <div class="banner">banner</div>
   <div class="search">search</div>
   <div class="rotating-slide">rotating-slide</div>
   <div class="midis-container">midis-container</div>
