--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,6 +23,7 @@
     <% if user_signed_in? %>
       <li class="user-avatar"><%= image_tag "bulma.png", class: "avatar-picture" %></li>
       <div class="avatar-dropdown-menu">
+      <li class="avatar-dropdown-item"><%= link_to "Upload Photo", edit_profiles_path, class: "navbar-link" %></li>
         <li class="avatar-dropdown-item"><%= link_to "My profile", "#", class: "navbar-link" %></li>
         <li class="avatar-dropdown-item"><%= link_to "Log out",  destroy_user_session_path, data: {turbo_method: :delete}, class: "navbar-link" %>
       </div>
