Create midi card partial and midi card list partial

--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -22,7 +22,7 @@
 
   <!-- ask Johannes if there are any problems with styling this midi_list please, thank you -->
   <div>
-  <%= render "midi_list", midis: @midis %>
+    <%= render "midi_card_list", midis: @midis %>
   </div>
 </div>
 <!--SEARCH END -->
