--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,91 @@ body {
   background-color: black !important;
   color: white !important;
 }
+
+.container {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+}
+
+.midi-card {
+  display: flex;
+  width: 900px;
+  background-image: linear-gradient(#000000, #383838);
+  padding: 20px;
+}
+
+.midi-card-play-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.midi-card-details {
+  flex-grow: 1;
+}
+
+.midi-card-details-artist a {
+  color: #AEAEAE;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.midi-card-details-artist a:hover {
+  color: $primary-blue;
+}
+
+.midi-card-details-row-2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.midi-card-details-track a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+.midi-card-details-track a:hover {
+  color: $primary-blue;
+}
+
+.midi-card-details-image {
+  background-color: grey;
+  height: 70px;
+}
+
+.midi-card-details-bottom {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 5px;
+}
+
+.midi-card-details-bottom-tags {
+  display: flex;
+}
+
+.midi-card-details-bottom-buttons {
+  display: flex;
+}
+
+.midi-card-details-bottom-upvotes {
+  display: flex;
+  margin-right: 10px;
+  gap: 5px;
+}
+
+.midi-card-details-bottom-downloads {
+  display: flex;
+  margin-right: 10px;
+  gap: 5px;
+}
+
+.card-tag {
+  background-color: white;
+  color: black;
+  border-radius: 15px;
+  padding: 0px 10px;
+  margin: 0px 5px;
+}
