--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,4 +3,5 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
-@import "neon_buttons"
+@import "neon_buttons";
+@import "midi_card"
