--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,9 @@
   <% end %>
 </div>
 <div class="home-container">
-  <div class="banner">banner</div>
+  <div class="banner">
+    <%= image_tag "banner-logo.png", class: "banner-logo" %>
+  </div>
   <div class="search">search</div>
   <div class="rotating-slide">rotating-slide</div>
   <div class="midis-container">midis-container</div>
