logo placed in banner

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,9 +19,9 @@
     background-color: rgb(26, 147, 147);
     // padding: 20px;
     border: 1px solid black;
-    display: grid;
-    justify-content: center;
-    align-items: center;
+    // display: grid;
+    // justify-content: center;
+    // align-items: center;
 }
 
 .banner {
