--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,14 @@
 </div>
 <div class="home-container">
   <div class="banner">
-    <%= image_tag "banner-logo.png", class: "banner-logo" %>
+    <div class="logo-medee-burrito">
+      <div class="logo-background">
+        <%= image_tag "banner-logo.png", class: "banner-logo" %>
+      </div>
+      <div class="medee">
+        <h1>medee</h1>
+      </div>
+    </div>
   </div>
   <div class="search">search</div>
   <div class="rotating-slide">rotating-slide</div>
