--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
 <div class="home-container">
   <div class="banner">
     <div class="logo-medee-burrito">
-      <div class="logo-background">
+      <div class="glow-background">
         <%= image_tag "banner-logo.png", class: "banner-logo" %>
       </div>
       <div class="medee">
