--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,16 +1,46 @@
 .logo-medee-burrito {
   position: relative;
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   align-items: center;
   justify-content: space-around;
 }
 
-.logo-background > img {
+.glow-background > img {
   width: 300px;
 }
 
 .medee > h1{
   font-size: 120px;
+}
+
+.banner-logo {
+  position: absolute;
+  z-index: 10;
+}
+
+.glow-background::before , .logo-background:after{
+  content: '';
+  position: absolute;
+  background: linear-gradient(45deg, #e6fb04, #ff6600, #00ff66, #00ffff, #ff00ff, #ff0099, #6e0dd0, #ff3300, #099fff);
+  background-size: 400%;
+  width: calc(100% + 50px);
+  height: calc(100% + 50px);
+  z-index: 1;
+  animation: animate 20s linear infinite;
+}
+
+@keyframes animate{
+  0%{
+    background-position: 0 0;
+  }
+
+  50%{
+    background-position: 400% 0;
+  }
+
+  100%{
+    background-position: 0 0;
+  }
 }
