--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,9 +15,9 @@
       <div class="glow-background">
         <%= image_tag "banner-logo.png", class: "banner-logo" %>
       </div>
-      <div class="medee">
+      <%# <div class="medee">
         <h1>medee</h1>
-      </div>
+      </div> %>
     </div>
   </div>
   <div class="search">search</div>
