missing_coma_into_index_scss

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,5 @@
 // medee components
 @import "navbar";
 @import "neon_buttons";
-@import "midi_card"
+@import "midi_card";
 @import "bio_profile_card";
-
