--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,9 @@
     <li class="navbar-item">
       <%= link_to "medee", midis_path, class: "navbar-link" %>
     </li>
+    <li class="navbar-item">
+      <%= link_to "upload", new_midi_path , class: "navbar-link" %>
+    </li>
   </ul>
 <!-- navbar links end -->
 
