--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,51 +1,84 @@
-.logo-medee-burrito {
-  position: relative;
+.banner {
   display: flex;
-  width: 300px;
-  height: 300px;
   align-items: center;
+  position: relative;
   justify-content: space-around;
 }
 
-.glow-background > img {
-  width: 300px;
+// Rotating logo starts here
+
+.banner-logo-burrito {
+  position: relative;
+  // left: 100px;
+  width: 250px;
+  height: 250px;
 }
 
-// .medee > h1{
-//   font-size: 120px;
-// }
-
-.banner-logo {
+.banner-logo{
   position: absolute;
-  z-index: 10;
+  width: 100%;
+  height: 100%;
+  z-index: 11;
 }
 
-.glow-background::before , .logo-background:after{
+
+.banner-glow-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  // z-index: 10;
+  border-radius: 50%;
+  background: linear-gradient(180deg, transparent,
+ transparent 40%, #e5f403);
+ animation: rotating 2s linear infinite;
+}
+
+@keyframes rotating
+{
+  0%{
+    transform: rotate(0deg);
+    filter: hue-rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+    filter: hue-rotate(360deg);
+  }
+}
+
+.banner-glow-background:before {
   content: '';
   position: absolute;
-  background: linear-gradient(45deg, #e6fb04, #ff6600, #00ff66, #00ffff, #ff00ff, #ff0099, #6e0dd0, #ff3300, #099fff);
-  background-size: 400%;
-  width: calc(100% + 50px);
-  height: calc(100% + 50px);
-  z-index: 1;
-  animation: animate 20s linear infinite;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  background: #000;
+  border-radius: 50%;
+  z-index: 1000;
 }
 
-@keyframes animate{
-  0%{
-    background-position: 0 0;
-  }
-
-  50%{
-    background-position: 400% 0;
-  }
-
-  100%{
-    background-position: 0 0;
-  }
-}
-
-.glow-background::after{
+.banner-glow-background:after {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  // background: #000;
+  border-radius: 50%;
+  background: linear-gradient(45deg, transparent,
+  transparent 40%, #e5f403);
+  z-index: 1000;
+  // z-index: 1;
   filter: blur(40px);
-  opacity: 0.99;
+}
+
+
+// Rotating logo ends here
+
+.medee {
+  position: relative;
+  font-size: 150px;
+  top: 125px;
+  font-weight: 900;
 }
