--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 // medee components
 @import "navbar";
 @import "neon_buttons";
+@import "logo";
 @import "banner";
 @import "midi_card";
 @import "bio_profile_card";
