--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,6 +15,7 @@ header {
 
 
   .navbar-link {
+    text-transform: uppercase;
     text-decoration: none;
     color: rgb(169, 169, 169);
   }
@@ -28,7 +29,10 @@ header {
   // border-bottom: 1px solid rgba(255, 255, 255, 0.652);
 }
 
-.navbar-logo-section {}
+.navbar-logo-section {
+  height: 100%;
+  // width: 100%;
+}
 
 .navbar-link-section {
   li{
