--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,11 @@
 <header>
 <!-- logo start -->
   <%= link_to root_path, class: "navbar-logo-section" do %>
-  <%# <%= image_tag "ccp_logo_project.png", class: "logo" %>
-    <%# name will be gone once there's a logo %>
-    <h2>medee</h2>
+    <div class="logo-glow-burrito">
+      <div class="glow-background">
+      </div>
+      <%= image_tag "navbar-logo.png", class: "navbar-logo" %>
+    </div>
   <% end %>
 <!-- logo end -->
 
@@ -21,7 +23,7 @@
 <!-- sign-in start -->
   <ul class="navbar-sign-in-section">
     <% if user_signed_in? %>
-      <li class="username"> username</li>
+      <li class="username"> USERNAME</li>
       <li class="user-avatar"><%= image_tag "bulma.png", class: "avatar-picture" %></li>
       <div class="avatar-dropdown-menu">
         <li class="avatar-dropdown-item"><%= link_to "Upload Photo", edit_profiles_path, class: "navbar-link" %></li>
