Implement create function for midis

--- a/app/views/midis/_show_description.html.erb
+++ b/app/views/midis/_show_description.html.erb
@@ -9,17 +9,6 @@
     <p><%= midi.user.username %></p>
   </div>
   <div class="show-description-text">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam illum sequi commodi dolor animi mollitia ab.
-    Repudiandae distinctio doloribus, inventore quae ab explicabo nemo, quos illum officiis debitis non!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam illum sequi commodi dolor animi mollitia ab.
-    Repudiandae distinctio doloribus, inventore quae ab explicabo nemo, quos illum officiis debitis non!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam illum sequi commodi dolor animi mollitia ab.
-    Repudiandae distinctio doloribus, inventore quae ab explicabo nemo, quos illum officiis debitis non!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam illum sequi commodi dolor animi mollitia ab.
-    Repudiandae distinctio doloribus, inventore quae ab explicabo nemo, quos illum officiis debitis non!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam illum sequi commodi dolor animi mollitia ab.
-    Repudiandae distinctio doloribus, inventore quae ab explicabo nemo, quos illum officiis debitis non!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam illum sequi commodi dolor animi mollitia ab.
-    Repudiandae distinctio doloribus, inventore quae ab explicabo nemo, quos illum officiis debitis non!
+    <%= midi.description %>
   </div>
 </div>
