Add full filename of placeholder image for heroku

--- a/app/views/midis/_show_description.html.erb
+++ b/app/views/midis/_show_description.html.erb
@@ -3,7 +3,7 @@
   <% if midi.user.photo.attached? %>
     <%= cl_image_path midi.user.photo.key, height: 150, crop: :fill %>
   <% else %>
-    <%= image_tag "profile-picture-placeholder", height: 150, crop: :fill %>
+    <%= image_tag "profile-picture-placeholder.png", height: 150, crop: :fill %>
   <% end %>
     <%# TODO insert user profile link %>
     <p><%= midi.user.username %></p>
