--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
   display: grid;
   grid-gap: 10px;
   height: 100%;
-  grid-template-rows: 70vh 100px 50vh 1fr;
+  grid-template-rows: 75vh 130px 50vh 1fr;
   grid-template-columns: 1fr;
   grid-template-areas:'banner'
                       'search'
@@ -16,9 +16,9 @@
 }
 
 .home-container > div {
-    background-color: rgb(0, 0, 0);
+    // background-color: blue;
     // padding: 20px;
-    border: 1px solid black;
+    // border: 1px solid rgb(255, 255, 255);
     // display: grid;
     // justify-content: center;
     // align-items: center;
