banner is done for now

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
             action: "keyup->search-midis#update"
           }
         %>
-        <%= f.submit "Search", class: "btn btn-primary" %>
+        <%= f.submit "Search", class: "neon-button-primary" %>
       <% end %>
       <div class="button-burrito">
         <a class="neon-button-primary" href="/midis">
