--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,33 +11,20 @@
   </div>
 
   <div class="search">
-      <%= form_with url: midis_path, method: :get, html: {class: "d-flex", data: {search_midis_target: "searchform"}} do |f| %>
-        <%= f.text_field :query,
-          class: "form-control",
-          placeholder: "Type a midi title",
-          value: params[:query],
-          data: {
-            search_midis_target: "searchinput",
-            action: "keyup->search-midis#update"
-          }
-        %>
-        <%= f.submit "Search", class: "neon-button-primary" %>
-      <% end %>
       <div class="button-burrito">
         <a class="neon-button-primary" href="/midis">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          search
+          explore midis
         </a>
-        <h5> or</h5>
-        <a class="neon-button-secondary" href="/midis">
+        <a class="neon-button-secondary" href="/midis/new">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          upload
+          upload midi
         </a>
       </div>
   </div>
