plays midi file on show page

--- a/app/views/midis/_show_midi.html.erb
+++ b/app/views/midis/_show_midi.html.erb
@@ -1,5 +1,5 @@
-<div class="show-midi">
-  <div class="show-midi-play">
+<div class="show-midi" data-controller="play-midi" data-play-midi-url-value="/testfile.mid">
+  <div class="show-midi-play" data-action="click->play-midi#playOnClick">
     <svg width="52" height="51" viewBox="0 0 52 51" fill="none" xmlns="http://www.w3.org/2000/svg">
       <ellipse cx="25.6155" cy="25.1302" rx="25.6155" ry="25.1302" fill="#0085FF"/>
       <path d="M37.1706 25.1269L19.7526 35.9803L19.2491 15.0933L37.1706 25.1269Z" fill="white"/>
