uploader_photo_path:solved

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Upload picture</h1>
-<%= simple_form_for current_user, url: profiles_path do |f| %>
+<%= simple_form_for current_user, url: profile_path do |f| %>
   <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
