--- a/app/views/midis/_show_description.html.erb
+++ b/app/views/midis/_show_description.html.erb
@@ -9,6 +9,7 @@
     <p><%= midi.user.username %></p>
   </div>
   <div class="show-description-text">
+    <h3>description</h3>
     <%= midi.description %>
   </div>
 </div>
