--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <%= link_to "medee", midis_path, class: "navbar-link" %>
     </li>
     <li class="navbar-item">
-      <%= link_to "upload", new_midi_path , class: "navbar-link" %>
+      <%= link_to "uploader", new_midi_path , class: "navbar-link" %>
     </li>
   </ul>
 <!-- navbar links end -->
