converts midi to json upon upload

--- a/app/views/midis/new.html.erb
+++ b/app/views/midis/new.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div data-controller="convert-midi-to-json">
   <%= simple_form_for(@midi) do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
@@ -6,7 +6,8 @@
     <%= f.input :time_signature %>
     <%= f.input :category, collection: Midi.categories.map {|key, value| [key.titleize, Midi.categories.key(value)]} %>
     <%= f.input :moods, collection: Mood.all, as: :check_boxes %>
-    <%= f.input :midi, as: :file %>
+    <%= f.input :midi_file, as: :file, input_html: { data: {convert_midi_to_json_target: "input", action: "change->convert-midi-to-json#toJson"} }%>
+    <%= f.input :midi_json, as: :hidden, input_html: { data: { convert_midi_to_json_target: "result" } } %>
     <%= f.submit %>
   <% end %>
 </div>
