--- a/app/views/midis/_midi_card_list.html.erb
+++ b/app/views/midis/_midi_card_list.html.erb
@@ -1,5 +1,5 @@
-<div data-search-midis-target="midilist">
-  <p class="h3">
+<div class="midi-card-list" data-search-midis-target="midilist">
+  <p class="midi-available-count">
     <% if params[:query].blank? %>
       <%= pluralize midis.count, "midi" %> available
     <% else %>
