--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -1,6 +1,5 @@
-<%
-=begin %>
-
+<div class="index-container">
+  <div class="search-bar">
 <!-- ask Johannes if there are any problems with styling this search-form please, thank you -->
 <!--SEARCH START -->
 <div data-controller="search-midis">
@@ -18,24 +17,18 @@
       <%= f.submit "Search", class: "btn btn-primary" %>
     <% end %>
   </div>
-
-  <!-- ask Johannes if there are any problems with styling this midi_list please, thank you -->
-  <div>
-    <%= render "midi_card_list", midis: @midis %>
-  </div>
 </div>
 <!--SEARCH END -->
-
-<%
-=end %>
-
-
-<div class="index-container">
-  <div class="search-bar">search-bar</div>
+  </div>
   <div class="filter-midis">
     <div class="filter-midis-container">
-    <div class="filter">This is filter</div>
-    <div class="midi-card-list">
+    <div class="filter-wrap">
+      <%# <%= render "filter/filter.html.erb"%>
+      <%= render "filter"%>
+
+    </div>
+  <!-- ask Johannes if there are any problems with styling this midi_list please, thank you -->
+    <div class="midi-card-list-wrap">
       <%= render "midi_card_list", midis: @midis %>
     </div>
     </div>
