Add ability to upvote and remove upvote

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@ body {
   background-color: black !important;
   color: white !important;
 }
+
+.container {
+  background-color: black !important;
+}
