--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <!-- ask Johannes if there are any problems with styling this midi_list please, thank you -->
-  <div>
+  <div class="container">
     <%= render "midi_card_list", midis: @midis %>
   </div>
 </div>
