--- a/app/assets/stylesheets/components/_midi_card.scss
+++ b/app/assets/stylesheets/components/_midi_card.scss
@@ -3,6 +3,7 @@
   width: 900px;
   background-image: linear-gradient(#000000, #383838);
   padding: 20px;
+  margin-bottom: 20px;
 }
 
 .midi-card-play-button {
@@ -78,4 +79,14 @@
   border-radius: 15px;
   padding: 0px 10px;
   margin: 0px 5px;
+}
+
+.midi-button {
+  background: none;
+	// color: inherit;
+	border: none;
+	// padding: 0;
+	// font: inherit;
+	// cursor: pointer;
+	// outline: inherit;
 }
