options menu -edit and destroy-  added

--- a/app/views/midis/show.html.erb
+++ b/app/views/midis/show.html.erb
@@ -6,4 +6,12 @@
   <%= render "show_description", midi: @midi %>
 
   <%# TODO: Comment section %>
+
+  <%#=destroy midi with confirmation  %>
+  <%# if current_user == @midi.user%>
+    <%#= link_to "Delete",
+    midi_path(@midi),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
+  <%# end %>
 </div>
