--- a/app/assets/stylesheets/components/_midi_show.scss
+++ b/app/assets/stylesheets/components/_midi_show.scss
@@ -47,3 +47,56 @@
 .show-description-artist p {
   text-align: center;
 }
+
+$delete-red: red;
+
+body {
+  margin: 32px;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  background: none;
+  border: 1px solid lighten(gray, 24%);
+  height: 48px;
+  padding: 0 24px 0 16px;
+  letter-spacing: .25px;
+  border-radius: 24px;
+  cursor: pointer;
+
+  &:focus {
+    outline: none;
+  }
+
+  .mdi {
+    margin-right: 8px;
+  }
+}
+
+.btn-delete {
+  font-size: 16px;
+  color: red;
+
+  >.mdi-delete-empty {
+    display: none;
+  }
+
+  &:hover {
+    background-color: lighten(red, 48%);
+
+    >.mdi-delete-empty {
+      display: block;
+    }
+
+    >.mdi-delete {
+      display: none;
+    }
+  }
+
+
+
+  &:focus {
+    box-shadow: 0 0 0 4px lighten(red, 40%);
+  }
+}
