--- a/app/views/midis/_show_midi.html.erb
+++ b/app/views/midis/_show_midi.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="show-midi-info">
     <h1><%= midi.title %></h1>
-    <p><%= midi.category %></p>
+      <p><%= midi.category %></p>
     <div class="show-midi-info-image">Image</div>
     <div class="show-midi-bottom">
       <%= render "midi_card_buttons", midi: midi %>
@@ -15,4 +15,20 @@
       <p>128 bpm (hardcoded)</p>
     </div>
   </div>
+</div>
+
+<% if current_user == @midi.user%>
+<div class="d-flex justify-content-end">
+  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <div class="btn-group" role="group">
+      <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Options
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+        <li><%= link_to "Edit", edit_midi_path(@midi), class: "dropdown-item" %></li>
+        <li><%= link_to "Delete", midi_path(@midi), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "dropdown-item" %></li>
+      </ul>
+    </div>
+  </div>
+ <% end %>
 </div>
